--- a/config/locales/es-CL.yml
+++ b/config/locales/es-CL.yml
@@ -86,6 +86,7 @@ es-CL:
       measure:
         <<: *common
         avg_age: Edad Promedio
+        campaign_company_id: Empresa
         device: Dispositivo
         happy_count: Felices
         female_count: Mujeres
