feat(campaigns): update views to use elasticsearch results

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,7 +42,7 @@ en:
     campaigns:
       index:
         title: Campaign
-      total_views: Views
+      contacts: Contacts
       total_people: People Flow
     campaign_dashboard:
       details_title: Details
