feat(campaign_graphs): add stats summary to campaign view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,7 +45,8 @@ en:
       contacts: Contacts
       total_people: People Flow
     campaign_dashboard:
+      contacts: Contacts
       details_title: Details
-      total_views: Contact Points
-      total_people: Flow of People
       effectiveness: '% Effectiveness'
+      total_people: Flow of people
+      unit_rotated: Unit rotated
