--- a/config/locales/es-CL.yml
+++ b/config/locales/es-CL.yml
@@ -135,6 +135,7 @@ es-CL:
       total_people: Flujo de gente
     campaign_dashboard:
       details_title: Detalles
-      total_views: Puntos de Contacto
-      total_people: Flujo de Personas
+      contacts: Contactos
       effectiveness: '% Efectividad'
+      total_people: Flujo de personas
+      unit_rotated: Unidades rotaron
