feat(campaigns): add location filter to graph stats

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,5 +48,6 @@ en:
       contacts: Contacts
       details_title: Details
       effectiveness: '% Effectiveness'
+      filters_title: Filters
       total_people: Flow of people
       unit_rotated: Unit rotated
