--- a/config/locales/es-CL.yml
+++ b/config/locales/es-CL.yml
@@ -137,5 +137,6 @@ es-CL:
       details_title: Detalles
       contacts: Contactos
       effectiveness: '% Efectividad'
+      filters_title: Filtros
       total_people: Flujo de personas
       unit_rotated: Unidades rotaron
