feat(device): activate or deactivate devices as admin

--- a/config/locales/es-CL.yml
+++ b/config/locales/es-CL.yml
@@ -84,6 +84,7 @@ es-CL:
         campaign: Campaña
         company: Empresa
         location: Local
+        active: Activo
       location:
         <<: *common
         brand: Cadena
