feat(dashboard): change chart package

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,6 +50,7 @@ en:
       contacts: Contacts
       units_rotated: Units rotated
       total_people: People Flow
+      week: Week from
     campaign_dashboard:
       avg_age: Avg. Age
       contacts: Contacts
