--- a/config/locales/es-CL.yml
+++ b/config/locales/es-CL.yml
@@ -139,6 +139,7 @@ es-CL:
       contacts: Contactos
       units_rotated: Unidades rotaron
       total_people: Flujo de gente
+      week: Semana desde
     campaign_dashboard:
       avg_age: Edad Prom.
       details_title: Detalles
