feat(campaign): add '%' to happiness and efectiveness in summary

--- a/config/locales/es-CL.yml
+++ b/config/locales/es-CL.yml
@@ -144,7 +144,7 @@ es-CL:
       avg_age: Edad Prom.
       details_title: Detalles
       contacts: Contactos
-      effectiveness: Efectividad
+      effectiveness: De Efectividad
       filters_title: Filtros
       happiness: De Felicidad
       total_people: Personas
