refactor(units-rotated): change name to units extracted

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,7 +49,7 @@ en:
         title: Campaign
       contacts: Contacts
       people: Flow of people
-      rotated: Units rotated
+      extracted: Units extracted
       effectiveness: Effectiveness
       happiness: Happiness
       age: Avg. Age
