--- a/config/locales/es-CL.yml
+++ b/config/locales/es-CL.yml
@@ -138,7 +138,7 @@ es-CL:
         title: Campañas
       contacts: Contactos
       people: Personas
-      rotated: Unid. rotaron
+      extracted: Unid. rotaron
       effectiveness: De Efectividad
       happiness: De Felicidad
       age: Edad. Prom
