feat(campaign-stats): show rotation in campign show and index

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,7 +49,8 @@ en:
         title: Campaign
       contacts: Contacts
       people: Flow of people
-      extracted: Units extracted
+      extraction: Units extracted
+      rotated: Total rotation
       effectiveness: Effectiveness
       happiness: Happiness
       age: Avg. Age
