--- a/config/locales/es-CL.yml
+++ b/config/locales/es-CL.yml
@@ -138,7 +138,8 @@ es-CL:
         title: Campañas
       contacts: Contactos
       people: Personas
-      extracted: Unid. rotaron
+      extracted: Unid. extraídas
+      rotation: Rotación Total
       effectiveness: De Efectividad
       happiness: De Felicidad
       age: Edad. Prom
