feat(campaign-index): change date format

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -58,3 +58,6 @@ en:
     campaign_dashboard:
       details_title: Details
       filters_title: Filters
+  date:
+    formats:
+      short: "%a %d/%m/%Y"
